objects/V_ODATA_BILLING_PROFILES__x.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_CAN__c</fullName>
        <description>ACCOUNT_CAN</description>
        <externalDeveloperName>ACCOUNT_CAN</externalDeveloperName>
        <label>ACCOUNT_CAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_NAME__c</fullName>
        <description>ACCOUNT_NAME</description>
        <externalDeveloperName>ACCOUNT_NAME</externalDeveloperName>
        <label>ACCOUNT_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_BDOM__c</fullName>
        <description>BP_BDOM</description>
        <externalDeveloperName>BP_BDOM</externalDeveloperName>
        <label>BP_BDOM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_CC_EXP_MONTH__c</fullName>
        <description>BP_CC_EXP_MONTH</description>
        <externalDeveloperName>BP_CC_EXP_MONTH</externalDeveloperName>
        <label>BP_CC_EXP_MONTH</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CC_EXP_YEAR__c</fullName>
        <description>BP_CC_EXP_YEAR</description>
        <externalDeveloperName>BP_CC_EXP_YEAR</externalDeveloperName>
        <label>BP_CC_EXP_YEAR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CC_TYPE__c</fullName>
        <description>BP_CC_TYPE</description>
        <externalDeveloperName>BP_CC_TYPE</externalDeveloperName>
        <label>BP_CC_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CONTACT_CACI__c</fullName>
        <description>BP_CONTACT_CACI</description>
        <externalDeveloperName>BP_CONTACT_CACI</externalDeveloperName>
        <label>BP_CONTACT_CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_FIRST_NAME__c</fullName>
        <description>BP_CON_FIRST_NAME</description>
        <externalDeveloperName>BP_CON_FIRST_NAME</externalDeveloperName>
        <label>BP_CON_FIRST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_LAST_NAME__c</fullName>
        <description>BP_CON_LAST_NAME</description>
        <externalDeveloperName>BP_CON_LAST_NAME</externalDeveloperName>
        <label>BP_CON_LAST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_SFDC_ID__c</fullName>
        <description>BP_CON_SFDC_ID</description>
        <externalDeveloperName>BP_CON_SFDC_ID</externalDeveloperName>
        <label>BP_CON_SFDC_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_CON_SIEBEL_ID__c</fullName>
        <description>BP_CON_SIEBEL_ID</description>
        <externalDeveloperName>BP_CON_SIEBEL_ID</externalDeveloperName>
        <label>BP_CON_SIEBEL_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_MASKED_CC_NUMBER__c</fullName>
        <description>BP_MASKED_CC_NUMBER</description>
        <externalDeveloperName>BP_MASKED_CC_NUMBER</externalDeveloperName>
        <label>BP_MASKED_CC_NUMBER</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_NAME_ON_CARD__c</fullName>
        <description>BP_NAME_ON_CARD</description>
        <externalDeveloperName>BP_NAME_ON_CARD</externalDeveloperName>
        <label>BP_NAME_ON_CARD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_NAME__c</fullName>
        <description>BP_NAME</description>
        <externalDeveloperName>BP_NAME</externalDeveloperName>
        <label>BP_NAME</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_PAYMENT_METHOD__c</fullName>
        <description>BP_PAYMENT_METHOD</description>
        <externalDeveloperName>BP_PAYMENT_METHOD</externalDeveloperName>
        <label>BP_PAYMENT_METHOD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_STATUS__c</fullName>
        <description>BP_STATUS</description>
        <externalDeveloperName>BP_STATUS</externalDeveloperName>
        <label>BP_STATUS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BP_TOKENIZED_CC_NUMBER__c</fullName>
        <description>BP_TOKENIZED_CC_NUMBER</description>
        <externalDeveloperName>BP_TOKENIZED_CC_NUMBER</externalDeveloperName>
        <label>BP_TOKENIZED_CC_NUMBER</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_CONTACT_CACI__c</fullName>
        <description>PRIMARY_CONTACT_CACI</description>
        <externalDeveloperName>PRIMARY_CONTACT_CACI</externalDeveloperName>
        <label>PRIMARY_CONTACT_CACI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_CON_FIRST_NAME__c</fullName>
        <description>PRIMARY_CON_FIRST_NAME</description>
        <externalDeveloperName>PRIMARY_CON_FIRST_NAME</externalDeveloperName>
        <label>PRIMARY_CON_FIRST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_CON_LAST_NAME__c</fullName>
        <description>PRIMARY_CON_LAST_NAME</description>
        <externalDeveloperName>PRIMARY_CON_LAST_NAME</externalDeveloperName>
        <label>PRIMARY_CON_LAST_NAME</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_CON_SFDC_ID__c</fullName>
        <description>PRIMARY_CON_SFDC_ID</description>
        <externalDeveloperName>PRIMARY_CON_SFDC_ID</externalDeveloperName>
        <label>PRIMARY_CON_SFDC_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIMARY_CON_SIEBEL_ID__c</fullName>
        <description>PRIMARY_CON_SIEBEL_ID</description>
        <externalDeveloperName>PRIMARY_CON_SIEBEL_ID</externalDeveloperName>
        <label>PRIMARY_CON_SIEBEL_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ACCOUNT_ID__c</fullName>
        <description>SFDC_ACCOUNT_ID</description>
        <externalDeveloperName>SFDC_ACCOUNT_ID</externalDeveloperName>
        <label>SFDC_ACCOUNT_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIEBEL_ACCOUNT_ID__c</fullName>
        <description>SIEBEL_ACCOUNT_ID</description>
        <externalDeveloperName>SIEBEL_ACCOUNT_ID</externalDeveloperName>
        <label>SIEBEL_ACCOUNT_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIEBEL_BP_ID__c</fullName>
        <description>SIEBEL_BP_ID</description>
        <externalDeveloperName>SIEBEL_BP_ID</externalDeveloperName>
        <label>SIEBEL_BP_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>